compilador.output
Terminais não utilizados na gramática

   PROGRAM
   DOIS_PONTOS
   PONTO
   T_BEGIN
   T_END
   VAR
   ATRIBUICAO
   ASPAS_SIMPLES
   ASPAS_DUPLAS


Gramática

    0 $accept: t_create $end

    1 $@1: /* vazio */

    2 $@2: /* vazio */

    3 t_create: CREATE TABLE IDENT $@1 ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 prox_regra

    4 lista_ident: lista_ident VIRGULA add_campo_tabela
    5            | add_campo_tabela

    6 $@3: /* vazio */

    7 $@4: /* vazio */

    8 $@5: /* vazio */

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

   10 $@6: /* vazio */

   11 add_campo_tabela: IDENT $@6 IDENT

   12 $@7: /* vazio */

   13 $@8: /* vazio */

   14 $@9: /* vazio */

   15 $@10: /* vazio */

   16 t_alter: ALTER $@7 TABLE $@8 IDENT $@9 PONTO_E_VIRGULA $@10 prox_regra

   17 $@11: /* vazio */

   18 $@12: /* vazio */

   19 $@13: /* vazio */

   20 t_comment: COMMENT ON tipos IDENT $@11 IS $@12 STRING PONTO_E_VIRGULA $@13 prox_regra

   21 tipos: TABLE
   22      | COLUMN
   23      | ROW

   24 prox_regra: t_alter
   25           | t_create
   26           | t_comment
   27           | /* vazio */


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
PROGRAM (258)
ABRE_PARENTESES (259) 3 9
FECHA_PARENTESES (260) 3 9
VIRGULA (261) 4
PONTO_E_VIRGULA (262) 3 16 20
DOIS_PONTOS (263)
PONTO (264)
T_BEGIN (265)
T_END (266)
VAR (267)
IDENT (268) 3 9 11 16 20
ATRIBUICAO (269)
STRING (270) 20
TABLE (271) 3 16 21
COLUMN (272) 22
ROW (273) 23
CREATE (274) 3
ALTER (275) 16
COMMENT (276) 20
ON (277) 20
IS (278) 20
ASPAS_SIMPLES (279)
ASPAS_DUPLAS (280)
FOREIGN (281) 9
KEY (282) 9
REFERENCES (283) 9


Não-terminais com as regras onde eles aparecem

$accept (29)
    à esquerda: 0
t_create (30)
    à esquerda: 3, à direita: 0 25
$@1 (31)
    à esquerda: 1, à direita: 3
$@2 (32)
    à esquerda: 2, à direita: 3
lista_ident (33)
    à esquerda: 4 5, à direita: 3 4
add_campo_tabela (34)
    à esquerda: 9 11, à direita: 4 5
$@3 (35)
    à esquerda: 6, à direita: 9
$@4 (36)
    à esquerda: 7, à direita: 9
$@5 (37)
    à esquerda: 8, à direita: 9
$@6 (38)
    à esquerda: 10, à direita: 11
t_alter (39)
    à esquerda: 16, à direita: 24
$@7 (40)
    à esquerda: 12, à direita: 16
$@8 (41)
    à esquerda: 13, à direita: 16
$@9 (42)
    à esquerda: 14, à direita: 16
$@10 (43)
    à esquerda: 15, à direita: 16
t_comment (44)
    à esquerda: 20, à direita: 26
$@11 (45)
    à esquerda: 17, à direita: 20
$@12 (46)
    à esquerda: 18, à direita: 20
$@13 (47)
    à esquerda: 19, à direita: 20
tipos (48)
    à esquerda: 21 22 23, à direita: 20
prox_regra (49)
    à esquerda: 24 25 26 27, à direita: 3 16 20


State 0

    0 $accept: . t_create $end

    CREATE  deslocar, e ir ao estado 1

    t_create  ir ao estado 2


State 1

    3 t_create: CREATE . TABLE IDENT $@1 ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 prox_regra

    TABLE  deslocar, e ir ao estado 3


State 2

    0 $accept: t_create . $end

    $end  deslocar, e ir ao estado 4


State 3

    3 t_create: CREATE TABLE . IDENT $@1 ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 prox_regra

    IDENT  deslocar, e ir ao estado 5


State 4

    0 $accept: t_create $end .

    $padrão  aceitar


State 5

    3 t_create: CREATE TABLE IDENT . $@1 ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 prox_regra

    $padrão  reduzir usando a regra 1 ($@1)

    $@1  ir ao estado 6


State 6

    3 t_create: CREATE TABLE IDENT $@1 . ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 prox_regra

    ABRE_PARENTESES  deslocar, e ir ao estado 7


State 7

    3 t_create: CREATE TABLE IDENT $@1 ABRE_PARENTESES . lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 prox_regra

    IDENT    deslocar, e ir ao estado 8
    FOREIGN  deslocar, e ir ao estado 9

    lista_ident       ir ao estado 10
    add_campo_tabela  ir ao estado 11


State 8

   11 add_campo_tabela: IDENT . $@6 IDENT

    $padrão  reduzir usando a regra 10 ($@6)

    $@6  ir ao estado 12


State 9

    9 add_campo_tabela: FOREIGN . KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

    KEY  deslocar, e ir ao estado 13


State 10

    3 t_create: CREATE TABLE IDENT $@1 ABRE_PARENTESES lista_ident . FECHA_PARENTESES PONTO_E_VIRGULA $@2 prox_regra
    4 lista_ident: lista_ident . VIRGULA add_campo_tabela

    FECHA_PARENTESES  deslocar, e ir ao estado 14
    VIRGULA           deslocar, e ir ao estado 15


State 11

    5 lista_ident: add_campo_tabela .

    $padrão  reduzir usando a regra 5 (lista_ident)


State 12

   11 add_campo_tabela: IDENT $@6 . IDENT

    IDENT  deslocar, e ir ao estado 16


State 13

    9 add_campo_tabela: FOREIGN KEY . ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 17


State 14

    3 t_create: CREATE TABLE IDENT $@1 ABRE_PARENTESES lista_ident FECHA_PARENTESES . PONTO_E_VIRGULA $@2 prox_regra

    PONTO_E_VIRGULA  deslocar, e ir ao estado 18


State 15

    4 lista_ident: lista_ident VIRGULA . add_campo_tabela

    IDENT    deslocar, e ir ao estado 8
    FOREIGN  deslocar, e ir ao estado 9

    add_campo_tabela  ir ao estado 19


State 16

   11 add_campo_tabela: IDENT $@6 IDENT .

    $padrão  reduzir usando a regra 11 (add_campo_tabela)


State 17

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES . IDENT $@3 FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

    IDENT  deslocar, e ir ao estado 20


State 18

    3 t_create: CREATE TABLE IDENT $@1 ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA . $@2 prox_regra

    $padrão  reduzir usando a regra 2 ($@2)

    $@2  ir ao estado 21


State 19

    4 lista_ident: lista_ident VIRGULA add_campo_tabela .

    $padrão  reduzir usando a regra 4 (lista_ident)


State 20

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT . $@3 FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

    $padrão  reduzir usando a regra 6 ($@3)

    $@3  ir ao estado 22


State 21

    3 t_create: CREATE TABLE IDENT $@1 ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 . prox_regra

    CREATE   deslocar, e ir ao estado 1
    ALTER    deslocar, e ir ao estado 23
    COMMENT  deslocar, e ir ao estado 24

    $padrão  reduzir usando a regra 27 (prox_regra)

    t_create    ir ao estado 25
    t_alter     ir ao estado 26
    t_comment   ir ao estado 27
    prox_regra  ir ao estado 28


State 22

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 . FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

    FECHA_PARENTESES  deslocar, e ir ao estado 29


State 23

   16 t_alter: ALTER . $@7 TABLE $@8 IDENT $@9 PONTO_E_VIRGULA $@10 prox_regra

    $padrão  reduzir usando a regra 12 ($@7)

    $@7  ir ao estado 30


State 24

   20 t_comment: COMMENT . ON tipos IDENT $@11 IS $@12 STRING PONTO_E_VIRGULA $@13 prox_regra

    ON  deslocar, e ir ao estado 31


State 25

   25 prox_regra: t_create .

    $padrão  reduzir usando a regra 25 (prox_regra)


State 26

   24 prox_regra: t_alter .

    $padrão  reduzir usando a regra 24 (prox_regra)


State 27

   26 prox_regra: t_comment .

    $padrão  reduzir usando a regra 26 (prox_regra)


State 28

    3 t_create: CREATE TABLE IDENT $@1 ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 prox_regra .

    $padrão  reduzir usando a regra 3 (t_create)


State 29

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES . REFERENCES IDENT $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

    REFERENCES  deslocar, e ir ao estado 32


State 30

   16 t_alter: ALTER $@7 . TABLE $@8 IDENT $@9 PONTO_E_VIRGULA $@10 prox_regra

    TABLE  deslocar, e ir ao estado 33


State 31

   20 t_comment: COMMENT ON . tipos IDENT $@11 IS $@12 STRING PONTO_E_VIRGULA $@13 prox_regra

    TABLE   deslocar, e ir ao estado 34
    COLUMN  deslocar, e ir ao estado 35
    ROW     deslocar, e ir ao estado 36

    tipos  ir ao estado 37


State 32

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES . IDENT $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

    IDENT  deslocar, e ir ao estado 38


State 33

   16 t_alter: ALTER $@7 TABLE . $@8 IDENT $@9 PONTO_E_VIRGULA $@10 prox_regra

    $padrão  reduzir usando a regra 13 ($@8)

    $@8  ir ao estado 39


State 34

   21 tipos: TABLE .

    $padrão  reduzir usando a regra 21 (tipos)


State 35

   22 tipos: COLUMN .

    $padrão  reduzir usando a regra 22 (tipos)


State 36

   23 tipos: ROW .

    $padrão  reduzir usando a regra 23 (tipos)


State 37

   20 t_comment: COMMENT ON tipos . IDENT $@11 IS $@12 STRING PONTO_E_VIRGULA $@13 prox_regra

    IDENT  deslocar, e ir ao estado 40


State 38

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES IDENT . $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

    $padrão  reduzir usando a regra 7 ($@4)

    $@4  ir ao estado 41


State 39

   16 t_alter: ALTER $@7 TABLE $@8 . IDENT $@9 PONTO_E_VIRGULA $@10 prox_regra

    IDENT  deslocar, e ir ao estado 42


State 40

   20 t_comment: COMMENT ON tipos IDENT . $@11 IS $@12 STRING PONTO_E_VIRGULA $@13 prox_regra

    $padrão  reduzir usando a regra 17 ($@11)

    $@11  ir ao estado 43


State 41

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES IDENT $@4 . ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 44


State 42

   16 t_alter: ALTER $@7 TABLE $@8 IDENT . $@9 PONTO_E_VIRGULA $@10 prox_regra

    $padrão  reduzir usando a regra 14 ($@9)

    $@9  ir ao estado 45


State 43

   20 t_comment: COMMENT ON tipos IDENT $@11 . IS $@12 STRING PONTO_E_VIRGULA $@13 prox_regra

    IS  deslocar, e ir ao estado 46


State 44

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES . IDENT $@5 FECHA_PARENTESES

    IDENT  deslocar, e ir ao estado 47


State 45

   16 t_alter: ALTER $@7 TABLE $@8 IDENT $@9 . PONTO_E_VIRGULA $@10 prox_regra

    PONTO_E_VIRGULA  deslocar, e ir ao estado 48


State 46

   20 t_comment: COMMENT ON tipos IDENT $@11 IS . $@12 STRING PONTO_E_VIRGULA $@13 prox_regra

    $padrão  reduzir usando a regra 18 ($@12)

    $@12  ir ao estado 49


State 47

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES IDENT . $@5 FECHA_PARENTESES

    $padrão  reduzir usando a regra 8 ($@5)

    $@5  ir ao estado 50


State 48

   16 t_alter: ALTER $@7 TABLE $@8 IDENT $@9 PONTO_E_VIRGULA . $@10 prox_regra

    $padrão  reduzir usando a regra 15 ($@10)

    $@10  ir ao estado 51


State 49

   20 t_comment: COMMENT ON tipos IDENT $@11 IS $@12 . STRING PONTO_E_VIRGULA $@13 prox_regra

    STRING  deslocar, e ir ao estado 52


State 50

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES IDENT $@5 . FECHA_PARENTESES

    FECHA_PARENTESES  deslocar, e ir ao estado 53


State 51

   16 t_alter: ALTER $@7 TABLE $@8 IDENT $@9 PONTO_E_VIRGULA $@10 . prox_regra

    CREATE   deslocar, e ir ao estado 1
    ALTER    deslocar, e ir ao estado 23
    COMMENT  deslocar, e ir ao estado 24

    $padrão  reduzir usando a regra 27 (prox_regra)

    t_create    ir ao estado 25
    t_alter     ir ao estado 26
    t_comment   ir ao estado 27
    prox_regra  ir ao estado 54


State 52

   20 t_comment: COMMENT ON tipos IDENT $@11 IS $@12 STRING . PONTO_E_VIRGULA $@13 prox_regra

    PONTO_E_VIRGULA  deslocar, e ir ao estado 55


State 53

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES .

    $padrão  reduzir usando a regra 9 (add_campo_tabela)


State 54

   16 t_alter: ALTER $@7 TABLE $@8 IDENT $@9 PONTO_E_VIRGULA $@10 prox_regra .

    $padrão  reduzir usando a regra 16 (t_alter)


State 55

   20 t_comment: COMMENT ON tipos IDENT $@11 IS $@12 STRING PONTO_E_VIRGULA . $@13 prox_regra

    $padrão  reduzir usando a regra 19 ($@13)

    $@13  ir ao estado 56


State 56

   20 t_comment: COMMENT ON tipos IDENT $@11 IS $@12 STRING PONTO_E_VIRGULA $@13 . prox_regra

    CREATE   deslocar, e ir ao estado 1
    ALTER    deslocar, e ir ao estado 23
    COMMENT  deslocar, e ir ao estado 24

    $padrão  reduzir usando a regra 27 (prox_regra)

    t_create    ir ao estado 25
    t_alter     ir ao estado 26
    t_comment   ir ao estado 27
    prox_regra  ir ao estado 57


State 57

   20 t_comment: COMMENT ON tipos IDENT $@11 IS $@12 STRING PONTO_E_VIRGULA $@13 prox_regra .

    $padrão  reduzir usando a regra 20 (t_comment)
